# search-rg

./: Cargo.toml  README.md
benches/: search_benchmark.rs
src/: lib.rs  main.rs
